--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -34,6 +34,7 @@ dependencies:
   flutter_bloc: ^8.0.1
   flutter_secure_storage: ^5.0.2
   toast: ^0.2.9
+  intl: ^0.17.0
 
 
   # The following adds the Cupertino Icons font to your application.
