--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,6 +35,8 @@ dependencies:
   flutter_secure_storage: ^5.0.2
   toast: ^0.2.9
   intl: ^0.17.0
+  image_picker: ^0.8.4+4
+
 
 
   # The following adds the Cupertino Icons font to your application.
