--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,8 +38,9 @@ dependencies:
   image_picker: ^0.8.4+4
   syncfusion_flutter_datagrid: ^20.3.50
   syncfusion_flutter_core: ^20.3.50
-
-
+  video_player: ^2.5.2
+  conditioned: ^0.1.0-dev.1
+  get: ^4.6.5
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
